<resources>
    <!-- Common -->
    <string name="app_name">面膜时间</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="default_loading_tips">加载中...</string>
    <string name="default_no_content">没有数据</string>
    <string name="default_no_more_date">没有更多数据</string>
    <string name="default_get_data_fail">获取数据失败</string>
    <string name="default_url_invalid">地址为空，请重新输入</string>
    <string name="downloading">下载中...</string>

    <!-- Others -->
    <string name="main_community">社区</string>
    <string name="main_record">心得</string>
    <string name="main_album">专辑</string>
    <string name="main_setting">设置</string>

    <string name="community">交流</string>
    <string name="read">阅读</string>

    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>

    <string name="setting_login">登陆</string>
    <string name="setting_plan">美丽计划</string>
    <string name="setting_sound">提醒声音</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_favorable">赏个好评</string>
    <string name="setting_share">要求好友</string>

    <string name="setting_music_bird">空山鸟语</string>
    <string name="setting_music_pkq">超萌皮卡丘</string>
    <string name="setting_music_dream">回梦游仙</string>
    <string name="setting_music_xqx">雪千寻</string>


    <!-- Strings related to 登陆 -->
    <string name="title_activity_login">登陆</string>
    <string name="prompt_account">账号</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="action_sign_in_quick">快速注册</string>

    <string name="error_invalid_account">账号错误</string>
    <string name="error_invalid_email">邮箱错误</string>
    <string name="error_invalid_password">密码错误</string>
    <string name="error_incorrect_password">密码错误</string>
    <!--    <string name="error_field_required">This field is required</string>-->

    <!-- Strings related to 注册 -->
    <string name="title_activity_register">注册</string>
    <string name="action_register">注册</string>

    <!-- Strings related to 记录 -->
    <string name="title_activity_recording">记录</string>
    <string name="prompt_record_title">快来为你的心得取一个名字吧</string>
    <string name="prompt_record_note">快来记录你的心得体会吧</string>
    <string name="action_submit">提交</string>
    <string name="label_group_num">共%s日记</string>

    <string name="error_invalid_title">心得标题为空</string>
    <string name="error_invalid_content">心得内容为空</string>

</resources>
