<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_base_title" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_margin_middle"
            android:layout_marginRight="@dimen/android_margin_middle"
            android:layout_marginTop="@dimen/android_margin_middle"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_record_title"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/android_margin_middle"
                android:gravity="left|top"
                android:hint="@string/prompt_record_note"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="3"
                android:singleLine="false" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/android_margin_middle"
                android:text="@string/action_submit"
                android:textStyle="bold" />

            <!--            <TextView
                            android:id="@+id/txt_quick_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="@dimen/android_margin_middle"
                            android:text="@string/action_sign_in_quick" />-->
        </LinearLayout>
    </ScrollView>

</LinearLayout>

